Adjust code editor font size to avoid wrapping of 80 chars @ 1024x768.

--- a/src/xctrls/TP.xctrls.codeeditor/TP.xctrls.codeeditor.css
+++ b/src/xctrls/TP.xctrls.codeeditor/TP.xctrls.codeeditor.css
@@ -27,3 +27,6 @@ xctrls|codeeditor > div {
     height: 100%;
 }
 
+xctrls|codeeditor .ace_editor {
+    font-size: 77%;
+}
